--- a/css/animations.css
+++ b/css/animations.css
@@ -14,7 +14,7 @@ nav .checked-img{
 }
 
 
-nav .checked{
+/* nav .checked{
     animation: 1s  forwards checked-button-in;
 }
 
@@ -27,7 +27,7 @@ nav .checked{
         transform: translate( 1em, 0em);
         border-color:black;
     }
-}
+} */
 
 /* code adapted from https://www.w3schools.com/howto/howto_css_zoom_hover.asp */
 .gallery-img{
