--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -47,12 +47,39 @@
 
 /*---- BODY ----*/
 .body-box{
+	display: -webkit-flex; /* For support in a series of Webkit browsers */
+	display: -ms-flex; /* For support in IE 10 */
+	display: flex;
+	-webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
 	gap:1.2em;
+}
+
+.top-section{
+	margin-top:3em;
 }
 
 section{
 	gap:1em; 
-	width:100%;
+	
+	margin-left:2em;
+	margin-right:2em;
+	display: -webkit-flex; /* For support in a series of Webkit browsers */
+	display: -ms-flex; /* For support in IE 10 */
+	display: flex;
+	-webkit-flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
+}
+.section-left{
+	flex:1;
+	text-align: left;
+	margin:0;
+}
+.section-right{
+	flex:3;
+	text-align: left;
 	
 }
 
@@ -139,6 +166,13 @@ nav{
 	align-self:flex-start;
 	margin:0;
 	margin-left:1em;
+	display: -webkit-flex; /* For support in a series of Webkit browsers */
+	display: -ms-flex; /* For support in IE 10 */
+	display:flex;
+	-webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+	
 }
 .nav-right{
 	display: -webkit-flex; /* For support in a series of Webkit browsers */
