--- a/css/main.css
+++ b/css/main.css
@@ -16,11 +16,11 @@ h1{
 }
 
 h2{
-  font-family:"sheepman";
+  font-family:"shackleton";
   font-weight: 400;
   font-size:2.2em;
   margin:0;
-  margin-bottom:0.2em;
+  
 }
 
 h3{
@@ -34,8 +34,6 @@ h4{
   font-family:"open-sans";
   font-size:1.4em;
   margin:0;
-  margin-top:0.25em;
-  margin-bottom:0.25em;
   padding:0;
   font-weight: 300;
 }
@@ -138,9 +136,7 @@ a:hover,a:active{
   text-decoration-style:solid;
 }
 
-a h1, a h3{
-  color:black;
-}
+a h1, a h3{ color:black; }
 
 /* Navigation bar */
 nav{
@@ -159,35 +155,17 @@ nav li{
   float: left;
   font-size:1.4em;
 }
-nav li:not(:last-child) { 
-  margin-right: 0.5em;  
-}
-nav li:last-child{
-  margin-left:3em;
-}
-
-nav img{
-  max-height:3em;
-}
-nav a h1{
-  color:white;
-}
-
+nav li:not(:last-child) { margin-right: 0.5em;  }
+nav li:last-child{ margin-left:3em; }
+nav img{ max-height:3em; }
+nav a h1{ color:white; }
 nav a{
   color:white;
   text-decoration-style: solid;
-  /* text-decoration-style: none; */
 }
+nav a:hover, a:active{ color:white; }
 
-nav a:hover, a:active{
-  color:white;
-  
-}
-
-nav .no-underline{
-  text-decoration: none;
-  
-}
+nav .no-underline{ text-decoration: none; }
 
 /* // Navigation bar */
 
