--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,7 @@ nav{
   mix-blend-mode: exclusion;
   z-index: 1000;
 }
-nav ul{
+nav ul, .menu-content ul{
   list-style-type: none;
   padding: 0; 
   margin: 0;
@@ -165,7 +165,7 @@ nav a{
 }
 nav a:hover, a:active{ color:white; }
 
-nav .no-underline{ text-decoration: none; }
+nav .no-underline, .menu-content .no-underline{ text-decoration: none; }
 
 nav button{
   color:white;
@@ -175,6 +175,30 @@ nav button{
   padding:auto;
   font-size:1.4em;
   font-weight:700;
+}
+
+.menu-content a{
+  text-decoration-style: solid;
+}
+
+.menu-content{
+  position:fixed;
+  z-index: 10;
+  top:0;
+  left:0;
+  background-color: white;
+  width: 100%;
+  height:100%;
+  padding-top:5em;
+  padding-left:2em;
+  padding-right:2em;
+  line-height:2.6em;
+  display:none;
+}
+
+.menu-content li{
+  font-size:1.6em;
+  
 }
 
 /* // Navigation bar */
@@ -237,4 +261,5 @@ nav button{
   font-size:6vmin;
   font-weight:700;
 }
+
 
