--- a/css/main.css
+++ b/css/main.css
@@ -270,3 +270,83 @@ nav button{
   min-height:2em;
   background-color: black;
 }
+
+/* paste */
+
+.container {
+  padding: 6px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 5px 8px #0000007a;
+  width:80vw;
+}
+
+.vueGallery .activePhoto {
+  width: 100%;
+  margin-bottom: 5px;
+  padding-bottom: 65%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border: 2px solid #fff;
+  position: relative;
+}
+.vueGallery .activePhoto button {
+  border: none;
+  background-color: transparent;
+  font-size: 32px;
+  color: #fff;
+  opacity: 0.5;
+  position: absolute;
+  outline: none;
+  height: 100%;
+}
+.vueGallery .activePhoto button:hover {
+  opacity: 1;
+}
+.vueGallery .activePhoto button.previous {
+  padding: 0 1em 0 0.7em;
+  left: 0;
+  background: -moz-linear-gradient(left, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%);
+  background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%);
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#80000000", endColorstr="#00000000",GradientType=1 );
+}
+.vueGallery .activePhoto button.next {
+  padding: 0 0.7em 0 1em;
+  right: 0;
+  background: -moz-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+  background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+  background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#00000000", endColorstr="#80000000",GradientType=1 );
+}
+.vueGallery .thumbnails {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+  grid-gap: 5px;
+}
+.vueGallery .thumbnails div {
+  width: 100%;
+  border: 2px solid #fff;
+  outline: 2px solid #fff;
+  cursor: pointer;
+  padding-bottom: 65%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 1;
+}
+.vueGallery .thumbnails div:hover {
+  opacity: 0.6;
+}
+.vueGallery .thumbnails div.active {
+  outline-color: #5c4084;
+  opacity: 1;
+}
+
+#gallery2{
+  display:none;
+}
+
+
+
