Gallery preview pics responsive
they now shrink and grow, before they were static & too large at a small resolution

--- a/css/main.css
+++ b/css/main.css
@@ -333,7 +333,7 @@ nav button{
 }
 .vueGallery .thumbnails {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(10em, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(calc(4em + 6vw), 1fr));
   grid-gap: 5px;
 }
 .vueGallery .thumbnails div {
