--- a/css/main.css
+++ b/css/main.css
@@ -417,3 +417,61 @@ nav button{
   right:2em;
   bottom: 2em;
 }
+
+.lightswitch{
+  background-image: url('../img/switch.jpg');
+  min-width: 6em;
+  height:10em;
+  background-size: contain;
+  background-repeat: no-repeat;
+  border:none;
+  z-index: 4;
+  background-color: transparent;
+  flex-grow: 4;
+}
+
+.lightswitch:hover, .lightswitch:active, .lightswitch2:hover, .lightswitch2:active{
+  box-shadow: none;
+}
+
+/*---- OLD BLACK BOX CODE ----*/
+#blackbox{
+  display:none;
+}
+.blackbox{
+  position:absolute;
+  top:3em;
+  z-index:1;
+  background-color:black;
+  color:white;
+  width:100%;
+  height:fit-content;
+  padding-left: 16vw;
+  padding-right: 16vw;
+  line-height: 3em;
+}
+
+.blackbox code{
+  background:none;
+}
+.blackbox .tab1{
+  text-indent:2em;
+}
+.blackbox .tab2{
+  text-indent:4em;
+}
+.blackbox .tab3{
+  text-indent:6em;
+}
+.blackbox .tab4{
+  text-indent:8em;
+}
+.blackbox .tab5{
+  text-indent:10em;
+}
+.blackbox .tab6{
+  text-indent:12em;
+}
+.blackbox .tab7{
+  text-indent:14em;
+}
