--- a/css/main.css
+++ b/css/main.css
@@ -203,6 +203,17 @@ nav button{
   z-index: 100;
 }
 
+.nav-background{
+  background-color: white;
+  position: sticky;
+  top:-0.01em;
+  width:100%;
+  height:3em;
+  margin:0em;
+  z-index:99;
+  
+}
+
 /* nav menu  */
 .menu-content a{
   text-decoration-style: solid;
@@ -237,8 +248,9 @@ nav button{
   transform: translate(-50%, -50%);
   mix-blend-mode: exclusion;
   background-image: url('../img/cursor-white-hover.svg');
-  
   pointer-events: none;
+  left:-5em; /* starts off of the page */
+  top:-5em;
   
   z-index: 1000;
 
