--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -96,6 +96,7 @@ section .archive{
 	
 }
 
+
 .element{
     border-style:solid;
     border-color:black;
@@ -210,8 +211,31 @@ nav{
 
 
 .two-img{
-	width:48%;
+	float: left;
+  	width: 50%;
 }
+
+.arcana-img1{
+	float: left;
+	width: 72.5%;
+	padding-right: 0.5em;
+}
+.arcana-img2{
+	float: left;
+	width: 27.5%;
+	padding-left: 0.5em;
+}
+.arcana-img3{
+	float: left;
+	width: 77%;
+	padding-right: 0.5em;
+}
+.arcana-img4{
+	float: left;
+	width: 23%;
+	padding-left: 0.5em;
+}
+
 .three-img{
 	width:30%;
 }
@@ -219,6 +243,17 @@ nav{
 	width:23%;
 }
 
+.two-img-box::after {
+	content: "";
+	clear: both;
+	display: table;
+}
+.two-img:nth-of-type(1){
+	padding-right: 0.5em;
+}
+.two-img:nth-of-type(2){
+	padding-left: 0.5em;
+}
 
 .two-column{
 	gap:1em;
@@ -255,36 +290,6 @@ nav{
 	}
 	
 }
-@media(max-width:80em){
-	/* nav{
-		-webkit-flex-direction: column;
-    	-ms-flex-direction: column;
-    	flex-direction: column;
-	} */
-	/* .nav-right{
-		-webkit-flex-direction: column;
-    	-ms-flex-direction: column;
-    	flex-direction: column;
-		
-	} */
-	/* nav li{
-		font-size:1em;
-	}
-	nav img{ max-height:2.5em; }
-	nav h1{
-		font-size:2.5em;
-	}
-	h2{
-		font-size:1.5em;
-	}
-	h4{
-		font-size:1.2em;
-	}
-	p{
-		font-size:1em;
-	} */
-}
-
 
 @media(max-width:64em){
 	.nav-right .expanded{
@@ -293,6 +298,19 @@ nav{
 	.nav-right .condensed{
 		display: inline-block;
 	}
+	.two-img{
+	  	width: 100%;
+		padding:0em;
+	}
+	.two-img:nth-of-type(1){
+		padding-right: 0em;
+		padding-bottom: 0.5em;
+	}
+	.two-img:nth-of-type(2){
+		padding-top: 0.5em;
+		padding-left: 0em;
+	}
+	
 }
 
 @media(max-width:29.6em){
@@ -301,3 +319,11 @@ nav{
 	}
 }
 
+@media(max-width:30em){
+	.project-title{
+		-webkit-flex-direction: column;
+    	-ms-flex-direction: column;
+    	flex-direction: column;
+		gap:0em;
+	}
+}
