--- a/css/main.css
+++ b/css/main.css
@@ -101,14 +101,14 @@ img{
   background-color: white;
   color: black;
   padding: calc(0.6em + 0.2vw);
-  border-style:dotted;
-  border-width:0.08em;
-  border-color:black;
+  border: solid 0.08em black;
+  border-radius: 1em;
   font-size:calc(0.8em + 0.3vw);
 }
 
 #myBtn:hover {
-  border-style:solid;
+  background-color: black;
+  color:white;
 }
 
 #menu-button{
@@ -277,8 +277,9 @@ nav button{
   object-fit:cover;
   place-items: center;
   width:100%;
-  height: 75vh;
-  min-height: 30em;
+  height: 50vh;
+  max-height: 35em;
+  min-height:20em;
 }
 .video-wrapper video{
   position: absolute;
@@ -295,22 +296,26 @@ nav button{
   position:absolute;
   color:white;
   text-align: right;
-  top:32vh;
+  top: 17vh;
   right:2em;
   mix-blend-mode:exclusion;
   z-index: 100;
 }
 .header-title h1{
-  font-size:calc(4em + 8vw);
+  font-size:calc(3em + 4vw + 4vh);
   margin-bottom:0.04em;
 }
 .header-title h3{
   /* font-size:4vmin; */
-  font-size:calc(1em + 1.5vw);
+  font-size:calc(1em + 1vw + 1vh);
   font-weight:700;
 
 }
-
+@media(max-width:30em){
+  .header-title{
+    top: 8vh;
+  }
+}
 
 /* Gallery */
 
