Begun wax dog page, home page

--- a/css/main.css
+++ b/css/main.css
@@ -167,8 +167,8 @@ nav li{
   /* font-size:1.4em; */
   font-size:calc(1em + 0.3vw);
 }
-nav li:not(:last-child) { margin-right: 0.5em;  }
-nav li:last-child{ margin-left:3em; }
+nav li:not(:last-child) { margin-right: calc(2vw + 1em);  }
+
 nav img{ 
   max-height:2.8em;
   height:100%;
@@ -195,6 +195,22 @@ nav button{
   padding:auto;
   font-size:calc(1em + 0.3vw);
   font-weight:700;
+}
+
+button{
+  border: none;
+  outline: none;
+  background-color: white;
+  color: black;
+  padding: calc(0.6em + 0.2vw);
+  border: solid 0.08em black;
+  border-radius: 1em;
+  font-size:calc(0.8em + 0.3vw);
+}
+
+button:hover {
+  background-color: black;
+  color:white;
 }
 
 /* index page nav */
