--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,7 @@ img{
 
 .img-border{
   border: black solid ;
-  border-width: calc(0.04em + 0.1vw);
+  border-width: calc(0.02em + 0.1vw);
 }
 
 /*---- //IMG ---- */
@@ -537,4 +537,9 @@ hr {
   margin-right: auto;
   margin-bottom:1em;
   margin-top:1em;
+}
+
+iframe{
+  position:relative;
+
 }
