--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -299,12 +299,6 @@ nav{
 }
 
 @media(max-width:64em){
-	/* .nav-right .expanded{
-		display: none;
-	}
-	.nav-right .condensed{
-		display: inline-block;
-	} */
 	.two-img{
 	  	width: 100%;
 		padding:0em;
@@ -332,5 +326,11 @@ nav{
     	-ms-flex-direction: column;
     	flex-direction: column;
 		gap:0em;
+	}
+	.nav-right .expanded{
+		display: none;
+	}
+	.nav-right .condensed{
+		display: inline-block;
 	}
 }
