--- a/css/main.css
+++ b/css/main.css
@@ -322,7 +322,7 @@ button:hover {
   position:absolute;
   color:white;
   text-align: right;
-  top: 17vh;
+  top: calc(4em + 4vh);
   right:2em;
   mix-blend-mode:exclusion;
   z-index: 100;
@@ -337,9 +337,13 @@ button:hover {
   font-weight:700;
 
 }
-@media(max-width:40em){
-  .header-title{
-    top: calc(7vh+2em);
+@media(max-width:35em){
+  
+  .header-title h1{
+    font-size:calc(2.5em + 4vw + 4vh);
+  }
+  .header-title h3{
+    font-size:calc(0.8em + 1vw + 1vh);
   }
 }
 
